# rsty

./: Cargo.toml
backend/: Rocket.toml
backend/src/: cors.rs  db.rs  main.rs
backend/src/utils/: try_froms.rs
desktop/src/: index.html  main.js  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
frontend/: Cargo.toml  index.html
frontend/src/: backend.rs  controllers.rs  main.rs  models.rs  state.rs
frontend/src/components/: task_forms.rs  task_item.rs
src/: cors.rs  db.rs  error.rs  main.rs  prelude.rs
src/utils/: macros.rs  mod.rs  try_froms.rs
