[package]
name = "todo_web"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
yew = { version = "0.20.0", features = ["csr"] }
reqwasm = "0.2"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
